fix buttons on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,7 @@ html {
   background-color: #ffffff;
   border-color: #ae65c5;
 }
-h1 {
+h2 {
   font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
   font-weight: 700;
 }
